@@ -1,3 +1,8 @@
+2002-07-02  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* NLEqn.cc (NLEqn::error_message): New function.
+	* NLEqn.h (NLEqn::solution_state, NLEqn::solution_ok): New functions.
+
 2002-07-01  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* lo-utils.cc (octave_fgetl): New function.
